<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:fillViewport="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingVertical="12dp"
		android:paddingHorizontal="16dp"
		>

		<TextView
			style="@style/Title"
			android:text="@string/configuration_hint_title"
			android:id="@+id/configuration_hint_title"
			/>

		<TextView
			android:id="@+id/configure_activity_intro_text"
			style="@style/configureActivityMainItem"
			android:text="@string/instructions_add_widget"
			android:layout_marginBottom="16dp"/>

		<TextView
			android:id="@+id/configuration_connect_hint_title"
			style="@style/Title"
			android:text="@string/configuration_connect_hint_title"
			android:visibility="gone"
			tools:visibility="visible"
			/>

		<androidx.cardview.widget.CardView
			android:id="@+id/connect_widget"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="2dp"
			android:layout_marginBottom="16dp"
			android:visibility="gone"
			tools:visibility="visible"
			card_view:cardCornerRadius="2dp"
			android:layout_marginTop="12dp"
			>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingHorizontal="8dp"
				android:layout_marginVertical="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/connect_info"
					android:layout_marginBottom="4dp"
					android:background="@drawable/rounded_corner_info"
					android:orientation="horizontal"
					android:paddingVertical="4dp"
					>

					<ImageView
						style="@style/Icon.Narrow"
						android:src="@drawable/icon_info"
						tools:ignore="ContentDescription" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/connect_widget_instructions"
						android:paddingHorizontal="6dp"
						/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<Spinner
						android:id="@+id/connect_spinner"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1" />

					<Button
						android:id="@+id/connect_widget_button"
						style="@style/button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="0"
						android:text="@string/connect" />
				</LinearLayout>

			</LinearLayout>
		</androidx.cardview.widget.CardView>

		<TextView
			android:id="@+id/configuration_widget_setup_title"
			style="@style/Title"
			android:text="@string/configuration_title" />

		<TextView
			style="@style/configureActivityMainItem"
			android:text="@string/widgetTitle"
			android:labelFor="@+id/appwidget_text"/>

		<EditText
			android:id="@+id/appwidget_text"
			style="@style/configureActivityMainItem"
			android:inputType="textCapSentences"
			android:importantForAutofill="no"
			/>

		<TextView
			style="@style/configureActivityMainItem"
			android:text="@string/interval" />

		<LinearLayout
			style="@style/configureActivityMainItem"
			android:orientation="horizontal">

			<Button
				android:id="@+id/minus"
				style="@style/button"
				android:text="-"
				tools:ignore="HardcodedText" />

			<TextView
				android:id="@+id/goal_interval"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:text="2"
				tools:ignore="HardcodedText" />

			<Button
				android:id="@+id/plus"
				style="@style/button"
				android:text="+"
				tools:ignore="HardcodedText" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:text="@string/day" />

			<TextView
				android:id="@+id/plural"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/plural" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="."
				tools:ignore="HardcodedText" />

		</LinearLayout>

		<TextView
			style="@style/configureActivityMainItem"
			android:text="@string/date_time_instructions" />

		<CheckBox
			android:id="@+id/showDateCheckbox"
			style="@style/configureActivityMainItem"
			android:layout_marginTop="0dp"
			android:text="@string/show_date_in_the_widget" />

		<CheckBox
			android:id="@+id/showTimeCheckbox"
			style="@style/configureActivityMainItem"
			android:layout_marginVertical="0dp"
			android:text="@string/show_time_in_the_widget" />

		<TextView
			style="@style/Title"
			android:layout_marginTop="20dp"
			android:text="@string/preview" />

		<TextView
			android:id="@+id/widget_preview"
			style="@style/WorkoutPixelPreview"
			android:layout_marginTop="12dp"
			android:background="#7b1fa2" />

		<View
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/add_button"
			style="@style/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:text="@string/add_widget" />


	</LinearLayout>
</ScrollView>