<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/card_view_past_workout"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_margin="0dp"
	android:orientation="horizontal">

	<TextView
		android:layout_width="72dp"
		android:layout_height="wrap_content"
		android:id="@+id/workout_date"
		android:text="@string/date"
		android:paddingStart="12dp"
		android:layout_gravity="center_vertical"
		tools:ignore="RtlSymmetry" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/workout_time"
		android:text="@string/time"
		android:paddingEnd="12dp"
		android:layout_gravity="center_vertical"
		tools:ignore="RtlSymmetry" />

	<View
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1" />

	<ImageView
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:padding="0dp"
		android:paddingHorizontal="16dp"
		android:id="@+id/workout_delete"
		android:src="@drawable/icon_delete"
		tools:visibility="invisible"
		android:contentDescription="@string/delete" />

</LinearLayout>
