<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.cardview.widget.CardView
		android:id="@+id/card_view_goal"
		style="@style/Card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		card_view:cardCornerRadius="2dp">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="8dp"
			android:paddingVertical="4dp">

			<TextView
				android:id="@+id/widget_preview"
				style="@style/WorkoutPixelPreview"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginVertical="4dp"
				android:background="#7b1fa2" />

			<TextView
				android:id="@+id/widget_title"
				style="@style/Title"
				app:layout_constraintLeft_toRightOf="@id/widget_preview"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:gravity="fill_horizontal"
				android:layout_marginTop="2dp"
				android:layout_marginStart="8dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				tools:ignore="RelativeOverlap"
				tools:text="Title" />

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dp"
				android:layout_marginStart="6dp"
				android:gravity="center_vertical"
				app:layout_constraintLeft_toRightOf="@id/widget_preview"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/widget_title">

				<ImageView
					style="@style/Icon.Narrow"
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:src="@drawable/icon_date"
					tools:ignore="ContentDescription" />

				<TextView
					android:id="@+id/widget_interval"
					style="@style/GridText"
					tools:text="Every 21 days" />

				<ImageView
					style="@style/Icon.Wide"
					android:layout_width="22dp"
					android:layout_height="22dp"
					android:src="@drawable/icon_done"
					tools:ignore="ContentDescription" />

				<TextView
					android:id="@+id/widget_last_workout"
					style="@style/GridText"
					tools:text="Last Workout" />

			</LinearLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>
