<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/edit_goal"
		android:icon="@drawable/icon_edit"
		android:orderInCategory="1"
		android:title="@string/edit"
		android:showAsAction="always"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction,AppCompatResource" />
</menu>
